--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -133,17 +133,17 @@ footer {
       <h2>Popular Desserts</h2>
       <div class="dessert-container">
           <div class="dessert">
-              <img src="https://en.wikipedia.org/wiki/Tiramisu#/media/File:Tiramisu_-_Raffaele_Diomede.jpg" alt="Dessert 1">
+              <img src="Tiamisu.jpg" alt="Tiramisu">
               <h3>Tiramisu</h3>
               <p>A classic Italian dessert made with layers of coffee-soaked ladyfingers and mascarpone cheese.</p>
           </div>
           <div class="dessert">
-              <img src="dessert2.jpg" alt="Dessert 2">
+              <img src="chocolate-cake.jpg" alt="Chocolate cake">
               <h3>Chocolate Cake</h3>
               <p>A rich and decadent chocolate cake, perfect for chocolate lovers.</p>
           </div>
           <div class="dessert">
-              <img src="dessert3.jpg" alt="Dessert 3">
+              <img src="Sundae.jpeg" alt="Sundae">
               <h3>Ice Cream Sundae</h3>
               <p>A delightful combination of ice cream, whipped cream, and various toppings.</p>
           </div>
