--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -161,5 +161,5 @@ footer {
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Company. All rights
+        <p>&copy; 2023 SweetEuphoria Desserts & Co. All rights
 
